# stock-notifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose.yaml  pyproject.toml
stock_notifier/: __init__.py  config.yaml  logging.py  main.py  models.py  product.py  scraper.py
stock_notifier/interface/: __init__.py  discord.py
tests/: test_models.py
