[tool.poetry]
name = "stock-notifier"
version = "0.1.0"
description = ""
authors = ["Julius Frost <33183774+juliusfrost@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "stock_notifier"}]

[tool.poetry.dependencies]
python = "^3.11"
py-cord = {version = "^2.6.1", extras = ["speed"]}
python-dotenv = "^1.0.1"
validators = "^0.28.3"
sqlalchemy = {version = "^2.0.36", extras = ["asyncio"]}
aiosqlite = "^0.20.0"
requests = "^2.32.3"
pytz = "^2024.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[tool.poetry.scripts]
run_bot = "stock_notifier.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
